# ducktools-classbuilder

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: auto_test.yml  publish_to_pypi.yml  publish_to_testpypi.yml
docs/: api.md  approach_vs_tool.md  conf.py  extension_examples.md  index.md  tutorial.md
docs/code_examples/: docs_ex02_register.py  docs_ex03_iterable.py  docs_ex05_frozen.py  docs_ex07_posonly.py  docs_ex08_converters.py  docs_ex09_annotated.py  docs_ex10_frozen_attributes.py  tutorial_code.py
docs/code_examples/outputs/: docs_ex01_basic.output  docs_ex08_converters.output  docs_ex09_annotated.output  tutorial_code.output
docs/perf/: performance_tests.md
docs/prefab/: api.md  dataclasses_differences.md  index.md  pre_post_init.md
docs_code/: docs_ex10_frozen_attributes.py  docs_ex1_basic.py  docs_ex3_iterable.py  docs_ex4_exclude_repr.py  docs_ex5_frozen.py  docs_ex6_annotations.py  docs_ex7_posonly.py  docs_ex8_converters.py  docs_ex9_annotated.py  tutorial_code.py
perf/: hyperfine_testmaker.py  perf_profile.py
readme_code/: docs_ex9_annotated.py  readme_ex4_exclude_repr.py  readme_ex5_frozen.py  readme_ex6_annotations.py  readme_ex7_posonly.py  readme_ex8_converters.py
scripts/: generate_precached_methods.py
src/ducktools/classbuilder/: __init__.py  __init__.pyi  _cached_methods.py  _cached_methods.pyi  _create_precached_methods.py  annotations.py  annotations.pyi  constants.py  constants.pyi  extras.py  extras.pyi  functions.py  functions.pyi  methods.py  methods.pyi  prefab.py  prefab.pyi
src/ducktools/classbuilder/annotations/: __init__.py  annotations_314.py  annotations_pre_314.py
src/ducktools/classbuilder/prefab/: __init__.py
tests/: _type_support.py  conftest.py  test_annotated.py  test_cached_methods.py  test_core.py  test_extras.py  test_extras_noimport.py  test_field_flags.py  test_slotmakermeta.py  test_slotter.py  test_tutorial_code.py
tests/annotations/: test_annotated.py  test_annotations_module.py
tests/method_tests/: test_method_callable.py  test_threading.py
tests/prefab/: test_alternate_gatherer.py  test_creation.py  test_dunders.py  test_frozen.py  test_funcs.py  test_get_methods.py  test_init.py  test_internals_dict.py  test_kw_only.py  test_replace.py  test_repr.py  test_subclass_implementation.py
tests/prefab/dynamic/: test_construction.py  test_internals.py  test_private.py  test_slotted_class.py  test_subclass_implementation.py
tests/prefab/shared/: test_creation.py  test_dunders.py  test_funcs.py  test_inheritance.py  test_init.py  test_kw_only.py  test_repr.py
tests/prefab/shared/examples/: creation.py  funcs_prefabs.py  inheritance.py  init_ex.py  repr_func.py
tests/py312_tests/: test_generic_annotations.py
tests/py314_tests/: _test_support.py  test_314_annotations.py  test_annotation_extras.py  test_annotationlib_matched.py  test_field_type.py  test_forwardref_annotations.py  test_generic_strip.py  test_init_signature.py  test_ns_annotations.py
