[build-system]
requires = [
    "setuptools>=64",
    "setuptools-scm>=8",
]
build-backend = "setuptools.build_meta"

[project]
name = "ducktools-classbuilder"
description = "Toolkit for creating class boilerplate generators"
authors = [
    { name = "David C Ellis" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Operating System :: OS Independent",
]
dynamic = ['version']
dependencies = [
    "reannotate>=0.1.3 ; python_full_version >= '3.14'",
]

[project.optional-dependencies]
# Needed for the current readthedocs.yaml
docs = [
    "sphinx>=8.1",
    "myst-parser>=4.0",
    "sphinx_rtd_theme>=3.0",
]

[project.urls]
"Homepage" = "https://github.com/davidcellis/ducktools-classbuilder"

[dependency-groups]
dev = [
    "pytest>=8.4",
    "pytest-cov>=6.1",
    "mypy>=1.16; platform_python_implementation == 'CPython'",
    "typing-extensions>=4.14",
    "coverage-simple-excludes>=1.1.1",
]
performance = [
    "attrs>=25.0",
    "pydantic>=2.11",
    "msgspec>=0.20",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_file = "src/ducktools/classbuilder/_version.py"
version_file_template = """
__version__ = "{version}"
__version_tuple__ = {version_tuple}
"""

[tool.pytest.ini_options]
addopts = "--cov=src/ --cov-report=term-missing"
testpaths = [
    "tests",
]

[tool.coverage.run]
plugins = ["coverage_simple_excludes"]
omit = ["_cached_methods.py"]

[tool.coverage.report]
fail_under = 90
exclude_also = [
    "def __repr__",
]

[tool.mypy]
# A combination of types in stubs and tests using dataclass syntax
# means that there are a number of annotations in otherwise unannotated areas
disable_error_code = ["annotation-unchecked"]

[tool.uv]
exclude-newer = "1 week"
exclude-newer-package = { reannotate = "1 hour" }
